   REST API is enabled via ``es.api.enabled`` setting.

  - Updated Elasticsearch to v5.4.3.

 - Enabled ``mapping.total_fields.limit`` setting for tables in order to be
   able to increase maximum number of columns higher than the default of
   ``1000``.

 - Table functions now support value expressions as arguments.

Fixes
=====

 - Allow support of conditional expression with different return types that can
   be converted to a single return type.

 - Fixed support for negate on null in conditional expression.

 - Fixed support for setting ``write.wait_for_active_shards`` on a partitioned
   table.

 - Added missing documentation about the default value of the table setting
   ``write.wait_for_active_shards``.

 - Improved user privileges matching to constant time complexity.

 - Improved the error message if an invalid table column reference is used in
   ``INSERT`` statements.

 - Optimized the algorithm that determines the best ordering of the tables in
   a ``JOIN``.

 - Updated Crash to ``0.21.4`` which fixes an issue with ``\verbose`` command
   not working correctly when ``Crash`` is started without ``--verbose``.

 - Implemented flexible return type of sum-function depending on the input
   types, which was previously only double.

 - Fixed a regression causing incorrect results for queries with ``DISTINCT``
   on scalar functions. E.g.::

     SELECT DISTINCT upper(name) FROM t

 - Fixed a race condition which made it possible to create new columns in a
   partition of a partitioned table that didn't match the type of the same
   column of sibling partitions.

 - Upgraded Admin UI version to fix an issue with the Twitter tutorial

 - Fixed a NPE when running ``select port from sys.nodes`` and
   ``psql.enabled: false`` was set

 - Fixed an issue where the user that gets provided by the client on connect is
   not always used as current user if host based authentication is disabled.
