@@ -49,6 +49,14 @@ public class ExplainAnalyzerTest extends CrateDummyClusterServiceUnitTest {
     }
 
     @Test
+    public void testExplainArrayComparison() throws Exception {
+        ExplainAnalyzedStatement stmt = e.analyze("explain SELECT id from sys.cluster where id = any([1,2,3])");
+        assertNotNull(stmt.statement());
+        assertThat(stmt.statement(), instanceOf(SelectAnalyzedStatement.class));
+        assertThat(stmt.fields(), Matchers.contains(isField("EXPLAIN SELECT \"id\"\nFROM \"sys\".\"cluster\"\nWHERE \"id\" = ANY([1,2,3])\n")));
+    }
+
+    @Test
     public void testExplainCopyFrom() throws Exception {
         ExplainAnalyzedStatement stmt = e.analyze("explain copy users from '/tmp/*' WITH (shared=True)");
         assertThat(stmt.statement(), instanceOf(CopyFromAnalyzedStatement.class));
